2011-06-24  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Fix tabbar font.
	Add site-lisp dir.

2011-06-21  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add copy menu item to tabbar-popup-menu.
	: Fix tabbar-popup-menu.

2011-06-20  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (auto-mode-alist): Use ntcmd-mode instead of dos-mode.
	Use bat-generic-mode instead of ntcmd-mode.
	("vc-svn"): Auto load psvn when used vc-svn.

2011-06-18  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (ecb-autoloads): for compatible.

	* init-basic.el: Don't report error when can't found gcc.

2011-06-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: backspace key for aix.
	(cedet-possible-dirs): if have offical cedet.

2011-06-16  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-insert-expand): autoinsert.

2011-06-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (write-file-hooks): time-stamp.
	(auto-insert-mode): auto-insert setting.

2011-06-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Make ecb support emacs-lisp-mode in build in cedet.

2011-06-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (buffers-menu-max-size): More buffers menu.

	* init-misc.el: Add dos-mode.

2011-06-08  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (recentf-track-closed-file): Adviced. Move to
	beginning of the recent list after killed.
	(undo-kill-buffer): Add.

2011-06-07  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (svn-status): Add psvn.

	* init-site.el: visual bookmarks support mouse.

2011-06-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (word-count-mode): Add word-count.el

2011-05-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Use comment-dwim instead of comment-or-uncomment-region.

2011-05-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set appt and diary.

2011-05-20  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Fix highlight-symbol-face.
